@@ -4,9 +4,6 @@
 *) [Features Menu]
 	*) When the ability comes about to be able to tell if all commands are available remove the 'login', if all commands are available
 
-*) [General]
-	*) Need to rework the dir/dir_url stuff, somewhere it got pushed to the side and it's really a mess now.
-
 
 Future (doesn't have to be before release)
 ------------------------------------------
